...
    <string name="city">City</string>
    <string name="active">Active</string>
    <string name="setup">Set up</string>
    <string name="allowedcompany">Allowed only for Admin user.</string>
    <string name="companycreated">New Company %s has created.</string>
    <string name="companyexist">New Company did not create. Company %s already exist.</string>
    <string name="createnewcompany">Create new company.</string>

    <!-- dagger2 -->
    <string name="daggerdemo" translatable="false">Demo dagger</string>
    <string name="daggerdemorx" translatable="false">Demo dagger Rx</string>
    <string name="daggerdemosub" translatable="false">Demo dagger SUB</string>
    <string name="daggershow" translatable="false">Show cart</string>
...
